--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -8,7 +8,7 @@
 }
 
 .header {
-  padding: 5rem 0;
+  padding: 2rem 0;
   flex: 1;
   display: flex;
   flex-direction: column;
@@ -16,11 +16,10 @@
   align-items: center;
 }
 .main {
-  margin-top: -50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: flex-start;
+  align-items: center;
 }
 
 .footer {
@@ -34,6 +33,19 @@
   align-items: center;
 }
 
+.maxWidth{
+  position: fixed;
+  padding-left: 10px;
+  top: 0px;
+  width: 100vw;
+  height: 63px;
+  background-color: white;
+  box-shadow: 0 0 10px #353535;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+}
+
 .topBar{
   position: fixed;
   padding-left: 10px;
@@ -42,7 +54,6 @@
   height: 61px;
   display: flex;
   background-color: white;
-  box-shadow: 0 0 10px #353535;
   z-index: 10;
 }
 
@@ -77,6 +88,7 @@
   color: rgba(20, 33, 61,0.8);
   top: -20px;
   right: 15px;
+  margin-left: 15px;
 }
 
 .burgerMenu{
@@ -85,14 +97,14 @@
   color: rgba(20, 33, 61,0.8);
   top: -20px;
   right: 15px;
+  padding: 0 5px;
 }
 
 .tituloHome{
   display: block;
   color: rgba(20, 33, 61,0.8);
   position: relative;
-  top: -70px;
-  left: -60px;
+  left: -30px;
 }
 
 .articulosConteiner{
@@ -102,6 +114,17 @@
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(20, 33, 61, 0.7);
   margin-bottom: 30px;
+  transition: all 0.1s;
+}
+
+.detalleProducto{
+  background-color: white;
+  border-radius: 10px;
+  box-shadow: 0 0 10px #353535;
+}
+
+.detalleProducto img{
+  border-radius: 10px 10px 0 0;
 }
 
 .displayContainer{
@@ -124,7 +147,7 @@
 }
 
 .articulosConteiner img{
-  border-radius: 10px;
+  border-radius: 10px 0 0 10px ;
 }
 
 .paddingLeft{
@@ -141,8 +164,33 @@
   font-size: 18px;
 }
 
+.displayNombre{
+  display: flex;
+  justify-content: space-around;
+}
+
 .categoriaProducto{
-  padding-left: 15px;
+  text-align: center;
+  font-weight: 700;
+}
+
+.tituloDescripcion{
+  width: 100%;
+  padding-left: 10px;
+  font-weight: 800;
+  font-size: 25px;
+  color: rgba(53, 53, 53,.7);
+}
+
+.displayBotones{
+  display: flex;
+  justify-content: center;
+  margin-left: -30px;
+}
+
+.descripcion{
+  padding: 0 15px;
+  margin-top: -10px;
 }
 
 @media(min-width:480px){
@@ -153,10 +201,13 @@
       width: 200px;
   }
   .tituloHome{
-    margin-left: -100px;
+    margin-left: -150px;
   }
   .articulosConteiner{
     width: 450px;
+  }
+  .detalleProducto img{
+    width: 300px;
   }
   .paddingLeft{
     display: flex;
@@ -169,11 +220,21 @@
     color:rgba(20, 33, 61, 0.7);
     font-weight: bold;
   }
+  .tituloDescripcion{
+    padding-left: 20px;
+  }
+  .descripcion{
+    padding-left: 25px;
+  }
+  
 }
 
 @media(min-width:679px){
   .tituloHome{
     margin-left: -40%;
+  }
+  .articulosConteiner img{
+    border-radius: 10px 10px 0 0;
   }
   .logo{
     padding-left: 30px;
@@ -188,11 +249,38 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    align-items: center;
+  }
+  .detalleProducto{
+    width: 80%;
+  }
+
+  .displayDetalle{
+    display: flex;
+    margin-bottom: -4px;
+  }
+
+  .detalleProducto img{
+    border-radius: 10px 0 0 10px;
+    width: 350px;
+  }
+  .agregarCarrito{
+    cursor: pointer;
   }
   .articulosConteiner{
     width: 280px;
     margin: 0 40px;
     margin-bottom: 50px;
+  }
+  .carrito:hover{
+    color: rgba(20, 33, 61,0.6);
+    cursor: pointer;
+  }
+  .logo img{
+    cursor: pointer;
+  }
+  .articulosConteiner{
+    cursor: pointer;
   }
   .articulosConteiner img{
     height: 280px;
@@ -200,6 +288,16 @@
   .displayContainer{
     display: flex;
     flex-direction: column;
+  }
+  .displayFlex{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+  }
+  .displayBotones{
+    margin-left: 0;
+    width: 63%;
   }
   .paddingLeft{
     height: 50px;
@@ -222,5 +320,36 @@
   .agregarCarrito{
     position: relative;
     left: 32%;
+  }
+}
+
+@media(min-width:992px){
+  .barraBusqueda{
+    width: 300px;
+  }
+  .articulosConteiner:hover{
+    box-shadow: 0 0 5px rgba(20, 33, 61, 0.7);;
+  }
+  .detalleProducto img{
+    width: 400px;
+  }
+  .agregarCarrito:hover{
+    color: rgba(217, 217, 217, 0.9);
+  }
+  .detalleProducto{
+    max-width: 800px;
+  }
+}
+@media(min-width:1080px){
+  .tituloHome{
+    margin-left: -700px;
+  }
+}
+@media(min-width:1200px){
+  .topBar{
+    max-width: 1250px;
+  }
+  .main{
+    max-width: 1300px;
   }
 }
