--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -133,6 +133,7 @@
 
 .nombreProducto{
   font-weight: bold;
+  color: rgba(20, 33, 61, 0.9);
 }
 
 .precioProducto{
@@ -191,6 +192,7 @@
 .descripcion{
   padding: 0 15px;
   margin-top: -10px;
+  max-width: 1200px;
 }
 
 @media(min-width:480px){
@@ -253,6 +255,20 @@
   }
   .detalleProducto{
     width: 80%;
+  }
+  .displayNombre{
+    display: flex;
+    flex-direction: column;
+    font-size: 20px;
+    align-items: center;
+  }
+  .displayNombre .precioProducto{
+    font-weight: 600;
+  }
+
+  .detalleProducto .categoriaProducto{
+    font-size: 20px;
+    font-weight: 600;
   }
 
   .displayDetalle{
@@ -343,6 +359,9 @@
 @media(min-width:1080px){
   .tituloHome{
     margin-left: -700px;
+  }
+  .tituloDescripcion{
+    padding-left: 60px;
   }
 }
 @media(min-width:1200px){
