--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -122,6 +122,12 @@
   border-radius: 10px;
   box-shadow: 0 0 10px #353535;
 }
+.centrarContenido {
+  display: flex;
+  flex-direction: column;
+  width: 57%;
+  align-items: center;
+}
 
 .detalleProducto img{
   border-radius: 10px 10px 0 0;
@@ -152,7 +158,7 @@
 }
 
 .paddingLeft{
-  padding-left: 15px;
+  text-align: center;
 }
 
 .agregarCarrito{
@@ -163,6 +169,7 @@
   background-color: #353535;
   border-radius: 5px;
   font-size: 18px;
+  width: 87%;
 }
 
 .displayNombre{
@@ -173,6 +180,7 @@
 .categoriaProducto{
   text-align: center;
   font-weight: 700;
+  color: rgba(20, 33, 61,0.8);
 }
 
 .tituloDescripcion{
@@ -186,7 +194,6 @@
 .displayBotones{
   display: flex;
   justify-content: center;
-  margin-left: -30px;
 }
 
 .descripcion{
@@ -214,16 +221,22 @@
   .detalleProducto img{
     width: 300px;
   }
+
+  .centrarContenido{
+    width: 58%;
+  }
   .paddingLeft{
     display: flex;
+    justify-content: space-around;
   }
   .precioProducto{
     margin-left: 20px;
   }
   .enStock{
     display: block;
-    color:rgba(20, 33, 61, 0.7);
+    color:rgba(20, 33, 61, 0.6);
     font-weight: bold;
+    text-align: center;
   }
   .tituloDescripcion{
     padding-left: 20px;
@@ -268,6 +281,9 @@
   .displayNombre .precioProducto{
     font-weight: 600;
   }
+  .centrarContenido{
+    width: 100%;
+  }
 
   .detalleProducto .categoriaProducto{
     font-size: 20px;
@@ -285,6 +301,7 @@
   }
   .agregarCarrito{
     cursor: pointer;
+    position: relative;
   }
   .articulosConteiner{
     width: 280px;
@@ -298,6 +315,7 @@
   .logo img{
     cursor: pointer;
   }
+  
   .articulosConteiner{
     cursor: pointer;
   }
@@ -327,6 +345,7 @@
     display: flex;
     flex-direction: column;
     justify-content: space-around;
+    align-items: center;
   }
   .displayBotones{
     margin-left: 0;
@@ -337,7 +356,7 @@
     justify-content: space-around;
   }
   .precioProducto{
-    margin-left: 5px;
+    margin-left: 15px;
     padding-right: 10px;
   }
   .categoriaProducto{
@@ -350,10 +369,7 @@
     height: 20px;
     text-align: center;
   }
-  .agregarCarrito{
-    position: relative;
-    left: 30%;
-  }
+
 }
 
 @media(min-width:992px){
