--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -135,11 +135,14 @@
 
 .displayContainer{
   display: flex;
+  margin-bottom: -4px;
 }
 
 .nombreProducto{
   font-weight: bold;
   color: rgba(20, 33, 61, 0.9);
+  margin-top: 3px;
+  height: 10px;
 }
 
 .precioProducto{
@@ -181,6 +184,8 @@
   text-align: center;
   font-weight: 700;
   color: rgba(20, 33, 61,0.8);
+  margin-top: -5px;
+  height: 10px;
 }
 
 .tituloDescripcion{
