--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -141,8 +141,8 @@
 .nombreProducto{
   font-weight: bold;
   color: rgba(20, 33, 61, 0.9);
-  margin-top: 3px;
-  height: 10px;
+  margin-top: 10px;
+  height: 40px;
 }
 
 .precioProducto{
@@ -166,6 +166,7 @@
 
 .agregarCarrito{
   margin-left: 10px;
+  margin-top: 5px ;
   margin-bottom: 10px;
   padding: 5px;
   color: white;
@@ -173,6 +174,9 @@
   border-radius: 5px;
   font-size: 18px;
   width: 87%;
+}
+.articulosConteiner .agregarCarrito{
+  display: none;
 }
 
 .displayNombre{
@@ -233,6 +237,7 @@
   .paddingLeft{
     display: flex;
     justify-content: space-around;
+    height: 50px;
   }
   .nombreProducto{
     margin-top: 15px;
@@ -245,6 +250,13 @@
     color:rgba(20, 33, 61, 0.6);
     font-weight: bold;
     text-align: center;
+    height: 20px;
+  }
+  .agregarCarrito{
+    display: block;
+  }
+  .articulosConteiner .agregarCarrito{
+    display: block;
   }
   .tituloDescripcion{
     padding-left: 20px;
